--- a/views/partials/admin-restaurant-form.hbs
+++ b/views/partials/admin-restaurant-form.hbs
@@ -52,4 +52,10 @@
     rows='3'
   >{{restaurant.description}}</textarea>
 </div>
+<div class="form-row mb-3">
+  <label for="image" class="form-label">image</label>
+  <input type="file" class="form-control" class-"form-control-file" id="image" name="image">
+</div>
+
 <button type='submit' class='btn btn-primary'>Submit</button>
+<a class='btn btn-outline-secondary' href='javascript:history.back()'>Back</a>
