--- a/views/admin/restaurants.hbs
+++ b/views/admin/restaurants.hbs
@@ -1,5 +1,13 @@
 <h1>餐廳後台</h1>
-<ul class="nav">
+{{!-- <ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/admin/restaurants">Restaurants</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/admin/users">Users</a>
+  </li>
+</ul> --}}
+<ul class="nav nav-tabs">
   <li class="nav-item">
     <a class="nav-link active" aria-current="page" href="/admin/restaurants">Restaurants</a>
   </li>
