--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -1,15 +1,20 @@
 <h1>後台使用者管理</h1>
-
-
-  <div class="users-back-btn-group d-flex justify-content-end mt-3">
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link" aria-current="page" href="/admin/restaurants">Restaurants</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" href="/admin/users">Users</a>
+  </li>
+</ul>
+  {{!-- <div class="users-back-btn-group d-flex justify-content-end mt-3">
     <a href='/admin/restaurants'>
       <button type="button" class="btn btn-outline-warning mr-2">Restaurants</button>
     </a>
     <a href='/admin/users'>
       <button type="button" class="btn btn-outline-success">Users</button>
     </a>
-  </div>
-
+  </div> --}}
 <br/>
 
 <table class="table">
