feat:show category on admin restaurant pages

--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -1,4 +1,4 @@
-<h1>後台使用者管理</h1>
+<h1>餐廳後台</h1>
 <ul class="nav nav-tabs">
   <li class="nav-item">
     <a class="nav-link" aria-current="page" href="/admin/restaurants">Restaurants</a>
