--- a/views/restaurant.hbs
+++ b/views/restaurant.hbs
@@ -16,6 +16,10 @@
   </div>
   <div class='col-md-8'>
     <p style='white-space: break-spaces;'>{{restaurant.description}}</p>
+    {{!-- <div class="d-grid gap-2"> --}}
+      <div class="d-grid gap-2 col-6 mx-auto">
+    <a href="/restaurants/{{restaurant.id}}/dashboard" class="btn btn-info">Dashboard</a>
+    </div>
   </div>
   <hr />
 </div>
