feat:add comment model

--- a/views/restaurant.hbs
+++ b/views/restaurant.hbs
@@ -14,7 +14,7 @@
       </ul>
     </div>
   </div>
-  <div class='col-md-8'>
+  <div class='col-md-8 mb-3'>
     <p style='white-space: break-spaces;'>{{restaurant.description}}</p>
     {{!-- <div class="d-grid gap-2"> --}}
       <div class="d-grid gap-2 col-6 mx-auto">
