--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -21,7 +21,7 @@
     <hr>
     <ul>
       <li>瀏覽次數 : {{restaurant.viewCounts}}</li>
-      <li>評論數 : </li>
+      <li>評論數 : {{restaurant.commentCounts}}</li>
       <li>收藏數 : </li>
     </ul>
   </div>
