feat:add putUser routes

--- a/views/partials/admin-restaurant-form.hbs
+++ b/views/partials/admin-restaurant-form.hbs
@@ -64,7 +64,7 @@
 </div>
 <div class="form-row mb-3">
   <label for="image" class="form-label">image</label>
-  <input type="file" class="form-control" class-"form-control-file" id="image" name="image">
+  <input type="file" class="form-control" class="form-control-file" id="image" name="image">
 </div>
 
 <button type='submit' class='btn btn-primary'>Submit</button>
