--- a/views/restaurants.hbs
+++ b/views/restaurants.hbs
@@ -39,15 +39,15 @@
           </form>
           {{/if}}
 
-            {{!-- {{#if isLiked}} --}}
+            {{#if isLiked}}
           <form action="/like/{{this.id}}?_method=DELETE" method="POST">
             <button type="submit" class="btn btn-danger m-1">UnLike</button>
           </form>
-          {{!-- {{else}} --}}
+          {{else}}
           <form action="/like/{{this.id}}" method="POST">
             <button type="submit" class="btn btn-primary m-1">Like</button>
           </form>
-          {{!-- {{/if}} --}}
+          {{/if}}
 
         </div>
       </div>
