--- a/views/partials/restaurant-tabs.hbs
+++ b/views/partials/restaurant-tabs.hbs
@@ -5,4 +5,7 @@
   <li class="nav-item">
     <a class="nav-link {{#ifCond route 'feeds'}}active{{/ifCond}}" href="/restaurants/feeds">最新動態</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link {{#ifCond route 'topUsers'}}active{{/ifCond}}" href="/users/top-users">美食達人</a>
+  </li>
 </ul>
