--- a/views/top-restaurants.hbs
+++ b/views/top-restaurants.hbs
@@ -18,12 +18,11 @@
               style='width: 250px; height:200px'
             />
           </div>
+
           <div class='col-md-6' style='min-width: 230px;'>
             <div class='card-body'>
               <h5 class='card-title'>{{this.name}}</h5>
-              <span
-                class='badge badge-secondary'
-              >收藏數：{{this.favoritedCount}}</span>
+              <span class="badge bg-secondary">收藏數：{{this.favoritedCount}}</span>   
               <p class='card-text'>{{this.description}}</p>
               <div class='btn-group'>
                 <a
