--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -22,7 +22,7 @@
     <ul>
       <li>瀏覽次數 : {{restaurant.viewCounts}}</li>
       <li>評論數 : {{restaurant.commentCounts}}</li>
-      <li>收藏數 : </li>
+      <li>收藏數 : {{restaurant.favoriteCounts}}</li>
     </ul>
   </div>
 </div>
