--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -43,7 +43,7 @@
                 >追隨</button></form>
             {{/if}}
             <a
-              href='/users/{{userId}}'
+              href='/users/{{current_user.id}}'
               class='btn btn-primary ms-3'
             >回到個人資訊頁</a>
           {{/ifCond}}
